--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "next": "15.1.3",
     "react": "^19.0.0",
