--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.7.9",
-    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
