--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.7.9",
+    "html2canvas": "^1.4.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.30.1",
     "next": "15.1.3",
