--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "moment": "^2.30.1",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "y-indexeddb": "^9.0.12",
     "y-webrtc": "^10.3.0",
