--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@craftjs/core": "^0.2.12",
+    "@craftjs/utils": "^0.2.5",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.7.9",
@@ -18,6 +20,8 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-confirm-alert": "^3.0.6",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
