--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "y-indexeddb": "^9.0.12",
+    "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.1.0",
-    "yjs": "^13.6.23"
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
